# dublin-bus-intelligence

./: .env.example  .gitignore  README.md  docker-compose.yml  railway.json  render.yaml  requirements.txt
.github/: copilot-instructions.md
backend/: __init__.py  main.py  pyproject.toml
backend/api/v1/: buses.py  crowding.py  health.py  journey.py  operations.py  predictions.py  router.py  routes.py  ws.py
backend/core/: __init__.py  config.py  database.py  exceptions.py  redis.py
backend/ml/: __init__.py
backend/models/: __init__.py  db.py  schemas.py
backend/services/: bunching_detection.py  carbon.py  crowd_reports.py  dart.py  dublin_bikes.py  ghost_detection.py  ingestion.py  intervention_engine.py  journey_planner.py  luas.py  network_health.py  predictions.py  stats_collector.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.ingestion
docs/: DESIGN.md  EXECUTIVE_SUMMARY.md  PITCH.md  SUBMISSION.md  VIDEO_SCRIPT.md
frontend/: package-lock.json  package.json  vercel.json
frontend/public/: manifest.json  sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/insights/: page.tsx
frontend/src/components/: NerveCentre.tsx
frontend/src/components/layers/: BunchingLayer.tsx  GhostBusLayer.tsx  JourneyRibbon.tsx  MultimodalStops.tsx  RouteShapeLayer.tsx  (+2 more)
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: store.ts  types.ts
ingestion/: __init__.py  main.py  pyproject.toml
ingestion/events/: __init__.py
ingestion/gtfs_realtime/: __init__.py  poller.py
ingestion/gtfs_static/: __init__.py  loader.py
ingestion/weather/: __init__.py
ml/evaluation/: .gitkeep
ml/models/: .gitkeep
ml/notebooks/: .gitkeep
ml/training/: .gitkeep
scripts/: check_feeds.py  collect_killer_stats.py  test_all_endpoints.py
tests/: benchmark.py
(+15 files in other folders)
