[project]
name = "busiq-ingestion"
version = "0.1.0"
description = "BusIQ — Data ingestion workers for GTFS, weather, and events"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "redis[hiredis]>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "geoalchemy2>=0.15.0",
    "protobuf>=5.29.0",
    "gtfs-realtime-bindings>=1.0.0",
    "structlog>=24.4.0",
    "orjson>=3.10.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
